# 9Qumalaqv2

./: .gitignore  ANALYSIS.md  FULL_REPORT.md  GAME_ANALYSIS.md  MCTS_EXPERIMENTS_REPORT.md  MCTS_PROJECT_PRESENTATION.md  NNUE_EXPERIMENTS.md  REPORT.md  SETUP.md  analyze_deep.py  analyze_games.py  deploy.py  export_positions.py  mcts 2.txt  mcts 3.txt  mcts 4.txt  mcts.txt  parse_games.py  temirtau.txt  validate_perft.py
alphazero-code/: .gitignore  ALPHAZERO_INTEGRATION.md  DEPLOY.md  QUICK_DEPLOY.md  README_SERVER.md  add_nginx_config.sh  deploy.sh  game.js  index.html  mcts-worker.js  server.py  setup_server.sh  styles.css  upload_files.sh
engine/: Cargo.toml  convert_human_games.py  convert_master_games.py  experiment_52_finetune.py  experiment_pured14.py  extract_expert_positions.py  finetune_nnue.py  finetune_transfer.py  gen_endgame_data.py  gen_opening_book.py  gen_opening_book_v2.py  match_engines.py  match_search.py  merge_data.py  nnue_weights.json  opening_book.txt  pipeline.py  (+17 more)
rust-mcts/: Cargo.toml
rust-mcts/scripts/: collect_master_games.py  eval_configb_style.py  eval_vs_engine.py  export_onnx.py  pipeline_max.sh  run_long.sh  run_max.sh  run_training.sh  train_alphazero.py  train_distillation.py  train_hybrid.py  train_loop.py  train_master.py
rust-mcts/src/: encoding.rs  eval_vs_engine.rs  evaluator.rs  gumbel.rs  league.rs  main.rs  mcts.rs  replay_buffer.rs  self_play.rs
v2/rust/: Cargo.toml
v2/rust/src/: arena.rs  board.rs  data_writer.rs  features.rs  gumbel.rs  main.rs  mcts.rs  network.rs  selfplay.rs  serve.rs  zobrist.rs
(+78 files in other folders)
