[package]
name = "rust-mcts"
version = "0.1.0"
edition = "2021"

[dependencies]
ort = { version = "2.0.0-rc.12", features = ["cuda", "load-dynamic"] }
ndarray = "0.16"
crossbeam-channel = "0.5"
rand = "0.8"
rand_distr = "0.4"
clap = { version = "4", features = ["derive"] }
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
